# sparse-ops

./: .gitignore  CMakeLists.txt  README.md  rebuild.sh  requirements.txt
benchmark/: CMakeLists.txt  bench_matvec.cpp  benchmark.sh  benchmark_matmul.sh  benchmark_matvec.sh  data_gen.cpp  data_gen.hpp  main.cpp
benchmark-mkl/: CMakeLists.txt  benchmark_matmul.sh  benchmark_matvec.sh
benchmark-mkl/common/: CMakeLists.txt  data_gen.cpp  data_gen.hpp
benchmark-mkl/matmul/: bench_matmul.cpp  main_matmul.cpp
benchmark-mkl/matvec/: bench_matvec.cpp
benchmark-openblas/: CMakeLists.txt  benchmark_matmul.sh  benchmark_matvec.sh
benchmark-openblas/common/: CMakeLists.txt  data_gen.cpp  data_gen.hpp
benchmark-openblas/matmul/: CMakeLists.txt  bench_matmul.cpp  main_matmul.cpp
benchmark-openblas/matvec/: CMakeLists.txt  bench_matvec.cpp  main_matvec.cpp
benchmark/common/: CMakeLists.txt  data_gen.cpp  data_gen.hpp
benchmark/matmul/: CMakeLists.txt  bench_matmul.cpp  main_matmul.cpp
benchmark/matvec/: CMakeLists.txt  main_matvec.cpp
docs/: performance.md
include/: activations.hpp  aligned_buffer.hpp  avx512_kernels.hpp  bcoo16_encoder.hpp  bilinear_diagonal_matmul.hpp  bilinear_diagonal_matvec.hpp  cbcoo_encoder.hpp  cbcoo_matmul.hpp  conv_kernels.hpp  dense_block_kernel.hpp  dense_matvec.hpp  ellpack_encoder.hpp  ellpack_matmul.hpp  ellpack_matvec.hpp  jit_cache.hpp  kernel_cache.hpp  kernel_manager.hpp  model.hpp  packed_matrix.hpp  quasi_dense_encoder.hpp  rbm_conv.hpp  sparse_dispatch.hpp  sparse_linear.hpp  sparse_matvec.hpp  sparse_matvec_mt.hpp  sparse_onnx.hpp  sparse_preproc.hpp  sparseops.hpp  utils.hpp
old/: CMakeLists.txt
old/include/: layer.hpp
old/src/: bindings.cpp  model.cpp  sparse_linear.cpp
old/tests/: test_runtime.py
onnx/: inspect_model.py
public_api/: export.py  export_sparse_runtime.py  runtime.py
python/: cpp_backend.py  runtime.py  sparse_onnx.py  sparseops.py  utils.py
src/: activations.cpp  bcoo16_encoder.cpp  bilinear_diagonal_matmul.cpp  bilinear_diagonal_matvec.cpp  bilinear_diagonal_matvec_hidden.cpp  bindings.cpp  cbcoo_encoder.cpp  cbcoo_matmul.cpp  dense_block_kernel.cpp  dense_matvec.cpp  ellpack_encoder.cpp  ellpack_matmul.cpp  ellpack_matvec.cpp  gemm_basic.cpp  kernel_cache.cpp  kernel_manager.cpp  matmul.cpp  matmul.py  model_run.cpp  packed_matrix.cpp  pybind_interface.cpp  quasi_dense_encoder.cpp  sparse_dispatch.cpp  sparse_matvec.cpp  sparse_matvec_mt.cpp  sparse_onnx.cpp  sparse_preproc.cpp  sparseops.cpp
src/codegen/: jit_cache.cpp  spmv_dense_template.cpp  spmv_template.cpp  spmv_template.hpp
src/layers/: activation.cpp  add.cpp  conv.cpp  conv_kernels.cpp  flatten.cpp  matmul.cpp  pool.cpp  rbm_conv.cpp
temp/: temp_bcoo.cpp
tests/: full_matmul.py  full_multiplication.py  full_test.py  mini_test.py  profile_masks.py  profile_spmv.py  reproduce_error.py  single_cnn_test.py  single_onnx_test.py  test_bcoo16.py  test_bilinear_diagonal.py  test_cnn.py  test_export.py  test_matmul.py  test_matvec.py  test_new_backend.py  test_onnx.py  test_onnx_variable_layers.py  test_python_runtime.py  test_quasi_encoder.py  test_resnet.py  test_runtime.py  test_sparse_kernel.py  test_sparse_matvec.py  utils.py
tests/old/: full_matmul.py  full_multiplication.py  mkl_ops.py  tmp_test.py  tvm_setup.py
tests/onnx/: create_model.py  examine_graph.py  export_resnet.py  load_model.py
tests/unit/: test_bilinear_diagonal.py  test_bilinear_diagonal_hidden.py  test_bilinear_matmul.py  test_ellpack_encoder.py  test_matmul.py  test_matvec.py  test_quasi_encoder.py
